methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:27: error: too many arguments for method faireV: ()Unit
  faireV(Color.YELLOW); forward; forward(); left(); forward(); faireV(Color.RED); forward; forward(); left(); forward(); faireV(Color.BLUE); forward; forward(); left(); forward(); faireV(Color.GREEN); forward; forward(); left(); forward(); backward();
        ^MethodsPicture:27: error: too many arguments for method faireV: ()Unit
  faireV(Color.YELLOW); forward; forward(); left(); forward(); faireV(Color.RED); forward; forward(); left(); forward(); faireV(Color.BLUE); forward; forward(); left(); forward(); faireV(Color.GREEN); forward; forward(); left(); forward(); backward();
                                                                     ^MethodsPicture:27: error: too many arguments for method faireV: ()Unit
  faireV(Color.YELLOW); forward; forward(); left(); forward(); faireV(Color.RED); forward; forward(); left(); forward(); faireV(Color.BLUE); forward; forward(); left(); forward(); faireV(Color.GREEN); forward; forward(); left(); forward(); backward();
                                                                                                                               ^MethodsPicture:27: error: too many arguments for method faireV: ()Unit
  faireV(Color.YELLOW); forward; forward(); left(); forward(); faireV(Color.RED); forward; forward(); left(); forward(); faireV(Color.BLUE); forward; forward(); left(); forward(); faireV(Color.GREEN); forward; forward(); left(); forward(); backward();
                                                                                                                                                                                          ^